Add Flyway configuration, refactor search functionality, and update battery capacity ranges